# QwE-project

./: .gitignore  README.md  TODO  alembic.ini  exp_convertor.py  main.ipynb  main.py  pyproject.toml  requirements.txt  run_parsers.py  schemas.py  settings.py  settings.yaml.copy  show.r
.github/workflows/: main_build.yaml
alembic/: env.py
alembic/versions/: 614e7d81aa6c_init.py  86d01b07ff60_add_pub_date_and_archive_status_in_.py  970877781d54_add_area_tabel.py  e6c280bd7e83_init.py
app/: crud.py  database.py  hh_parser.py  models.py  schemas.py  service.py
app/api/: router.py
app/api/endpoints/: area.py  chart.py  file.py  vacancy.py
app/cruds/: __init__.py  area.py  chart.py  vacancy.py
app/models/: __init__.py  area.py  vacancy.py
app/models/models_dto/: __init__.py  area_dto.py  vacancy_dto.py
app/schemas/: __init__.py  area.py  chart.py  vacancy.py
app/services/: __init__.py  area_service.py  chart_service.py  charts.py  downloader.py  file_service.py  map.py  vacancy_service.py
app/utils/: __init__.py  converters.py  math.py
assets/: data9.csv  people.csv  skills.csv  vacancies2.csv
exp/: between1And3.csv  between3And6.csv  moreThan6.csv  noExperience.csv
old_files/: RiM.docx  refactor.py
parser/: hh_parser.py  service.py
parsers/: __init__.py  hh_parser.py  regions_parser.py  service.py
tests/: conftest.py
tests/api/: test_area.py
tests/fixtures/: api.py
