[tool.poetry]
name = "qwe-project"
version = "0.1.0"
description = ""
authors = ["ZetoOfficial <tpptgs@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
alembic = "^1.8.0"
SQLAlchemy = "^1.4.39"
PyYAML = "^6.0"
fastapi = "^0.78.0"
black = "^22.6.0"
lxml = "^4.9.0"
parselab = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
